tests/cases/should_fail/literals/unclosed_string_literal.hash
// run=fail, stage=parse

"a
