tests/cases/should_fail/literals/unclosed_string_literal.stderr
error: unclosed string literal
 --> $DIR/unclosed_string_literal.hash:1:2
1 |   "a
  |    ^^ here
